2000-12-13	Joel Sherrill <joel@OARcorp.com>

	* configure.in: Added new directories.
	* shared/interrupts/Makefile.am: Added AM_CPPFLAGS to define TX39
	when compiling for a TX3904.
	* shared/interrupts/maxvectors.c: Corrected conditional logic.
	* tx39/Makefile.am: Added vectorisrs.
	* tx39/vectorisrs/Makefile.am, tx39/vectorisrs/vectorisrs.c,
	* tx39/vectorisrs/.cvsignore: New files.  This decodes the
	interrupt pending information on the TX3904 and vectors
	an interrupt.

2000-12-13	Joel Sherrill <joel@OARcorp.com>

	* shared/.cvsignore, shared/Makefile.am,
	shared/cache/.cvsignore, shared/cache/Makefile.am,
	shared/cache/cache.c, shared/cache/cache_.h,
	shared/interrupts/.cvsignore, shared/interrupts/Makefile.am,
	shared/interrupts/installisrentries.c,
	shared/interrupts/isr_entries.S,
	shared/interrupts/maxvectors.c, tx39/.cvsignore,
	tx39/Makefile.am, tx39/include/.cvsignore,
	tx39/include/Makefile.am, tx39/include/tx3904.h: New file.
	Moved some pieces of interrupt processing from score/cpu to
	libcpu/mips since many interrupt servicing characteristics are
	CPU model dependent.  This patch addresses the number of interrupt
	sources and where the ISR prologues are located.  The only way to
	currently install the ISR prologues requires that the prologues
	be installed into RAM.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-10-24	Alan Cudmore <alanc@linuxstart.com> and
	Joel Sherrill <joel@OARcorp.com>

	* This is a major reworking of the mips64orion port to use 
	gcc predefines as much as possible and a big push to multilib
	the mips port.  The mips64orion port was copied/renamed to mips